# UEFI-Hijack-Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
antidote/: Makefile
antidote/include/: installer.h
antidote/src/: anti_main.c  installer.c
chainloader/: Makefile
chainloader/include/: bootlib.h  snake_payload.h  ui.h
chainloader/src/: bootlib.c  chain_main.c  ui.c
common/include/: chainloader_payload.h  config.h  file_utils.h  snake_payload.h
common/src/: file_utils.c
fake_win/: Makefile  fake_windows.c
include/: chainloader_payload.h  installer.h  snake_payload.h  uefi.h  video.h
installer/: Makefile  test_run.sh
installer/include/: UEFIprobe_payload.h  installer.h  video.h
installer/src/: inst_main.c  installer.c  video.c
snake/: Makefile
snake/include/: game_logic.h  graphics.h  snake.h
snake/src/: game_logic.c  graphics.c  snake_main.c
src/: installer.c  main.c  video.c
